# yulrtland

./: .gitignore  Dockerfile  docker-compose.yml  full_faq.json  full_faq_translated_with_answers_de.json  nginx.conf  pyproject.toml  quiz_fixture.json  requirements.txt  robots.txt  web-api.Dockerfile
core/: settings.py  urls.py
locale/de/LC_MESSAGES/: django.mo  django.po
main/: admin.py  filters.py  models.py  sitemaps.py  translation.py  urls.py  views.py
main/migrations/: 0001_initial.py  0002_destination_features.py  0003_dateprice_destination.py  0004_blockinfo.py  0005_category_tag_news.py  0006_news_image.py  0007_sitesetting.py  0008_review_country.py  0009_sitesetting_image_review.py  0010_faq.py  0011_alter_faq_answer.py  0012_question_quiz_answeroption_question_quiz_and_more.py  0013_contactmessage.py  0014_tripbooking.py  0015_newslettersubscriber.py  0016_news_description_de_news_description_en_and_more.py  0017_answeroption_text_de_answeroption_text_en_and_more.py  0018_review_destination.py  0019_faqcategory_faq_category.py  0020_alter_faqcategory_description_and_more.py  0021_sitesetting_image_contact.py  0022_destination_slug_news_slug.py  0023_alter_destination_slug.py
static/assets/css/: bootstrap.css  jqueryui.css  main.css  main4d5886.css  main7c8c3c.css  main8c6c26.css
templates/: 404_page.html  about_us.html  base.html  blog_list2.html  blog_single.html  contact.html  element_testimonials.html  faq.html  iconfont.html  index.html  reviews.html  trip_detail.html  trips.html
templates/quiz/: question.html  submit.html  thank_you.html
(+6 files in other folders)
